# petrosa-utils

./: LICENSE  pyproject.toml  test.py
petrosa/binance/: binance.py
petrosa/checkers/: consistency.py
petrosa/converters/: backtests.py
petrosa/database/: mongo.py  sql.py
petrosa/messaging/: kafkaproducer.py  kafkareceiver.py
petrosa/observability/: opentel.py
petrosa/ta/: strategies.py  utils.py
utils/: test_const.py
